Changelog
=========

4.4.1 (unreleased)
------------------

- Nothing changed yet.


4.4.0 (2016-03-11)
------------------

- Store custom toolbars in registry.
  (With previous change, enable different toolbars per widget)
  [gotcha]

- Improve settings overloading per widget
  [gotcha]

- Load js only if you are an authenticated user.
  [bsuttor]


4.3.5 (2016-02-16)
------------------

- Fix image preview in ckeditor when clicking on main image in pop-pup window.
  [boulch]
  
4.3.4 (2016-01-21)
------------------

- Fix context of ckeditor_plone_config.js
  when called by plone.app.form.widgets.wysiwygwidget
  when adding a portlet.
  [gotcha]


4.3.3 (2016-01-20)
------------------

- Fix context of ckeditor_plone_config.js
  when called by plone.app.form.widgets.wysiwygwidget
  when editing a portlet.
  [gotcha]


4.3.2 (2016-01-08)
------------------

- Fix default value of image2_alignClasses (plus upgrade step)
  [gotcha]

- Add option to not minify JS to build-ckeditor scripts
  [gotcha]

- Fix build-ckeditor scripts to keep option to not use 
  image2 plugin
  [gotcha]

- Update ckeditor accordingly
  [gotcha]

- Check validity of image2_alignClasses
  [gotcha]


4.3.1.1 (2015-01-05)
--------------------

- Re-publish egg with generated static resources
  [ebrehault]


4.3.1 (2015-12-14)
------------------

- Update to CKeditor 4.5.6
  [gotcha]

- Add some robot tests
  [spreverde, gotcha]

- Add defaultTableWidth option to control panel to set the default table width in the table dialog window.


4.3.0b2 (2014-06-19)
--------------------

- Fix javascript order though GS.
  [montypie]


4.3.0b1 (2014-06-19)
--------------------

- Add image2 plugin and its dependencies.
  [gotcha]

- Add image2_alignClasses and image2_captionedClass setting to setup
  image2 plugin.
  [gotcha]

- Updated to CKeditor 4.4.1.
  [gotcha]

- Add removePlugins option to control panel to allow to deactivate plugins.
  [gotcha]

4.2.0 (2014-06-05)
------------------
