@@ -16,6 +16,28 @@
             name="cke_config_url"
             class="cke_config_url"
             tal:attributes="value python:ckview.cke_config_url(finder_context)" />
+     <tal:block condition="nocall:z3c_widget | nothing">
+       <tal:block define="cke_widget python:ckview.getCK_z3cwidget_settings(z3c_widget)">
+         <input type="hidden"
+                name="cke_iswidget"
+                class="cke_iswidget"
+                tal:attributes="value python: True" />
+         <div class="widget_settings">
+           <input type="hidden"
+                  class="baseHref"
+                  name="cke_baseHref"
+                  tal:attributes="value ckview/cke_basehref" />
+           <tal:block repeat="item cke_widget/items">
+             <input type="hidden"
+                    tal:define="k python: item[0];
+                                v python: item[1];"
+                    tal:attributes="name string:cke_$k;
+                                    class string:$k;
+                                    value v" />
+           </tal:block>
+         </div>
+       </tal:block>
+     </tal:block>
      <tal:block condition="nocall:widget | nothing">
        <tal:block define="cke_widget python:ckview.getCK_widget_settings(widget)">
          <input type="hidden"
